--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,5 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
+  <servlet>
+    <servlet-name>config</servlet-name>
+    <jsp-file>/config.jsp</jsp-file>
+    <init-param>
+      <param-name>name</param-name>
+      <param-value>tom</param-value>
+    </init-param>
+    <init-param>
+      <param-name>age</param-name>
+      <param-value>30</param-value>
+    </init-param>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>config</servlet-name>
+    <url-pattern>/config</url-pattern>
+  </servlet-mapping>
   <welcome-file-list>
     <welcome-file>index.jsp</welcome-file>
   </welcome-file-list>
